--- a/style.css
+++ b/style.css
@@ -46,6 +46,13 @@ nav a {
 /* banner */
 .banner {}
 
+.banner-img {
+    width: 1140px;
+    margin: 0 auto;
+    height: 700px;
+    padding: 10px 100px;
+}
+
 .banner-content {
     max-width: 800px;
     text-align: center;
@@ -60,4 +67,38 @@ nav a {
 
 .banner-description {}
 
-.btn-primary {}
+.btn-primary {
+    color: #FFF;
+    width: 180px;
+    height: 64px;
+    background-color: #FF900E;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+/* media query */
+/* mobile device */
+@media screen and (max-width: 576px) {
+    nav {
+        padding: 0px 0px;
+        align-items: start;
+    }
+
+    nav,
+    nav>ul {
+        flex-direction: column;
+
+    }
+
+    .banner-img {
+        width: 100%;
+        padding: 10px 0px;
+    }
+}
+
+/* tablet device*/
+@media screen and (min-width:576px) and (max-width:992px) {}
