--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav a {
     width: 1140px;
     margin: 0 auto;
     height: 700px;
-    padding: 10px 100px;
+    padding: 50px 100px;
 }
 
 .banner-content {
@@ -80,6 +80,61 @@ nav a {
     line-height: normal;
 }
 
+/* main */
+main {
+    width: 1440;
+    margin: 0 auto;
+}
+
+/* teams style */
+.teams-container {
+    display: flex;
+    align-items: center;
+    padding: 50px 100px;
+}
+
+.teams-img {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.team-content {
+    padding-left: 70px;
+}
+
+.teams-title {
+    font-size: 45px;
+    font-weight: 500;
+}
+
+.team-1 {
+    color: #131313;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.team-2 {
+    color: #FF900E;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.teams-des {
+    color: #727272;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+
 /* media query */
 /* mobile device */
 @media screen and (max-width: 576px) {
@@ -89,7 +144,8 @@ nav a {
     }
 
     nav,
-    nav>ul {
+    nav>ul,
+    .teams-container {
         flex-direction: column;
 
     }
