--- a/style.css
+++ b/style.css
@@ -189,6 +189,39 @@ main {
     font-family: Work Sans;
 }
 
+/* sponsor style */
+
+.sponsor {
+    text-align: center;
+    margin-top: 150px;
+}
+
+.sponsors-title {
+    color: #131313;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.sponsors-des {
+
+    color: #727272;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.sponsors-img {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
 /* media query */
 /* mobile device */
 @media screen and (max-width: 576px) {
@@ -218,6 +251,22 @@ main {
     .banner-img {
         width: 100%;
         padding: 10px 0px;
+    }
+
+    .card-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .fact-des {
+        width: 100%;
+    }
+
+    .sponsors-img {
+        flex-direction: column;
+        gap: 30px;
     }
 }
 
