--- a/style.css
+++ b/style.css
@@ -219,7 +219,26 @@ main {
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+}
+
+/* footer section */
+footer {
+    width: 1440px;
+    height: 100px;
+    border-radius: 8px;
+    background: #FFF4E7;
+}
+
+.footer-title {
+    color: #424242;
+    text-align: center;
+    padding-top: 40px;
+    /* font-family: Work Sans; */
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* media query */
