--- a/style.css
+++ b/style.css
@@ -144,6 +144,19 @@ main {
 .features .feature-title {
     border-left: 5px solid #FF900E;
     padding-left: 20px;
+    color: #131313;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.feature-des {
+    color: #727272;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
 }
 
 .feature-content .feature-card {
@@ -152,6 +165,33 @@ main {
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-content .feature-card h4 {
+    color: #131313;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.feature-content .feature-card p {
+    color: #727272;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.feature-img {
+    width: 50%;
+    margin-right: 200px;
+}
+
+.feature-img img {
+    width: 150%;
+    height: 95%;
+
 }
 
 .ten-years-badge {
@@ -295,9 +335,19 @@ footer {
 
     nav,
     nav>ul,
+    .features,
     .teams-container {
         flex-direction: column;
 
+    }
+
+    .feature-img img {
+        width: 300px;
+    }
+
+    .ten-years-badge {
+        margin-top: 200px;
+        width: 100%;
     }
 
     .team-content {
